# nonebot-plugin-ayaka-prevent-bad-words

./: ayaka_prevent_bad_words.py  pyproject.toml  readme.md
