[tool.poetry]
name = "nonebot_plugin_ayaka_prevent_bad_words"
version = "0.0.5"
description = "坏词撤回"
authors = ["Su <wxlxy316@163.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bridgeL/nonebot-plugin-ayaka-prevent-bad-words"
packages = [
    { include = "ayaka_prevent_bad_words.py", from = "." },
]


[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0b5"
nonebot-adapter-onebot = "^2.1.3"
nonebot-plugin-ayaka = "^0.3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
