[tool.poetry]
name = "nonebot_plugin_ayaka_prevent_bad_words"
version = "0.4.0"
description = "坏词撤回"
authors = ["Su <wxlxy316@163.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bridgeL/nonebot-plugin-ayaka-prevent-bad-words"
packages = [
    { include = "ayaka_prevent_bad_words.py", from = "." },
]


[tool.poetry.dependencies]
ayaka = "^0.0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
